--- a/libp2p/Cargo.toml
+++ b/libp2p/Cargo.toml
@@ -6,14 +6,21 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+bytes = "0.5"
 cid = { version = "0.4", features = ["impl-serde"] }
 fnv = "1.0.6"
 futures = "0.3"
+futures_codec = "0.3"
 log = "0.4.8"
 multihash = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = { version = "0.11", features = ["tags"] }
 smallvec = "1.2"
+thiserror = "1.0"
+
+plum_bigint = { path = "../primitives/bigint" }
+plum_block = { path = "../primitives/block" }
+plum_message = { path = "../primitives/message" }
 
 [dependencies.libp2p]
 version = "0.17"
