--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-base64 = "0.12"
 bls-signatures = "0.5"
 libsecp256k1 = "0.3"
 rand = "0.7"
@@ -16,6 +15,7 @@ thiserror = "1.0"
 
 plum_address = { path = "../primitives/address" }
 plum_hashing = { path = "../hashing" }
+plum_types = { path = "../primitives/types" }
 
 [dev-dependencies]
 serde_cbor = "0.11"
