--- a/primitives/message/Cargo.toml
+++ b/primitives/message/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-base64 = "0.12"
 cid = { version = "0.4", features = ["impl-serde"] }
 multihash = "0.10"
 serde = { version = "1.0", features = ["derive"] }
@@ -16,6 +15,7 @@ serde_cbor = { version = "0.11.1", features = ["tags"] }
 plum_address = { path = "../address" }
 plum_bigint = { path = "../bigint" }
 plum_crypto = { path = "../../crypto" }
+plum_types = { path = "../types" }
 
 [dev-dependencies]
 serde_json = "1.0"
