--- a/primitives/ticket/Cargo.toml
+++ b/primitives/ticket/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-base64 = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
+
+plum_types = { path = "../types" }
 
 [dev-dependencies]
 serde_cbor = "0.11.1"
