--- a/primitives/types/Cargo.toml
+++ b/primitives/types/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+base64 = "0.12"
 cid = { version = "0.4", features = ["impl-serde"] }
 serde = { version = "1.0", features = ["derive"] }
 
