--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-base64 = "0.12"
 bls-signatures = "0.5"
 libsecp256k1 = "0.3"
 parking_lot = "0.10"
@@ -17,3 +16,4 @@ thiserror = "1.0"
 
 plum_address = { path = "../primitives/address" }
 plum_crypto = { path = "../crypto" }
+plum_types = { path = "../primitives/types" }
