--- a/primitives/block/Cargo.toml
+++ b/primitives/block/Cargo.toml
@@ -12,9 +12,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 serde_cbor = { version = "0.11.1", features = ["tags"] }
 serde_json = "1.0"
+serde_repr = "0.1"
 
 plum_address = { path = "../address" }
 plum_bigint = { path = "../bigint" }
 plum_crypto = { path = "../../crypto" }
 plum_message = { path = "../message" }
-plum_ticket = { path = "../ticket" }
+plum_types = { path = "../types" }
